# IAM-Projects

./: CLAUDE.md  README.md  exportGroup_2025-9-1.csv  exportUsers_2025-9-1.csv
fitagent/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
fitagent/assets/fonts/: README.md
fitagent/assets/music/: README.md
fitagent/assets/public_domain/: if_kipling.md  invictus_henley.md  marcus_aurelius_meditations.md  seneca_letters.md
fitagent/src/fitagent/: cli.py  config.py  executor.py  pd_library.py  pipeline.py  store.py
fitagent/src/fitagent/agents/: base.py  contracts.py  ideation.py  metadata.py  scriptwriter.py  visual_director.py
fitagent/src/fitagent/ai/: client.py
fitagent/src/fitagent/integrations/: stock.py  youtube.py
fitagent/src/fitagent/media/: assemble.py  captions.py  ffmpeg.py  footage.py  music.py  shorts.py  tts.py
fitagent/tests/: conftest.py  test_agents.py  test_captions.py  test_config.py  test_executor.py  test_music.py  test_pipeline_dry_run.py  test_stock.py  test_store.py
jobagent/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
jobagent/profile/: answers.yaml  master_resume.md
jobagent/src/jobagent/: __init__.py  browser.py  cli.py  config.py  cookies.py  docgen.py  filters.py  store.py
jobagent/src/jobagent/ai/: client.py  scorer.py  tailor.py
jobagent/src/jobagent/apply/: formfill.py  indeed_apply.py  linkedin_easy_apply.py
jobagent/src/jobagent/scrapers/: indeed.py  linkedin.py
jobagent/tests/: test_ai_parsing.py  test_ai_robustness.py  test_cookie_export.py  test_docgen.py  test_encoding.py  test_engine_pin.py  test_filters.py  test_formfill.py  test_login_detection.py  test_page_title_parsing.py  test_profile_routing.py  test_store.py  test_tailor_instructions.py  test_url_parsing.py
shopagent/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
shopagent/src/shopagent/: cli.py  config.py  executor.py  orchestrator.py  store.py
shopagent/src/shopagent/agents/: amazon.py  base.py  fulfillment.py  listings.py  marketing.py  research.py  support.py
shopagent/src/shopagent/integrations/: cj_client.py  (+3 more)
shopagent/tests/: conftest.py  test_agents.py  test_amazon_client.py  test_cj_client.py  test_config.py  test_daily_pipeline.py  test_executor.py  test_shopify_client.py  test_store.py
(+17 files in other folders)
