[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fitagent"
version = "0.1.0"
description = "AI agent team that produces men's fitness motivation YouTube videos: script, voice, footage, edit, and queue for approval — you approve every upload"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "edge-tts>=6.1",
]

[project.optional-dependencies]
youtube = ["google-api-python-client>=2.100", "google-auth-oauthlib>=1.2"]
dev = ["pytest>=8.0"]

[project.scripts]
fitagent = "fitagent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "media: tests that invoke ffmpeg and render real media (skipped when ffmpeg is absent)",
]
