[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobagent"
version = "0.1.0"
description = "Semi-automated job application copilot for LinkedIn and Indeed: scan, score, tailor, apply (you click submit)"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.45",
    "anthropic>=0.69",
    "typer>=0.12",
    "pydantic>=2.7",
    "python-docx>=1.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
jobagent = "jobagent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
